# arcadia

./: .gitignore  ARCHITECTURE.md  CRITICAL_FIXES.md  CURL_TESTS.md  DEPLOYMENT.md  DEPLOYMENT_STATUS.md  Dockerfile  EMAIL_SCREENSHOT_GUIDE.md  FINAL_STATUS.md  HOW_TO_USE_SDK.md  IMPLEMENTATION_COMPLETE.md  MIGRATION_GUIDE.md  NGROK_SETUP.md  OMNI_BROWSER_PROFILE_SETUP.md  OMNI_SETUP.md  OMNI_SETUP_FIXED.md  OMNI_SETUP_GUIDE.md  PROJECT_SUMMARY.md  QUICKSTART.md  QUICK_START.md  README.md  README_NEW.md  REFACTORING_SUMMARY.md  RENDER_DEPLOYMENT.md  RENDER_READY_FIXES.md  SCREENSHOTS_GUIDE.md  SCREENSHOT_FEATURE_SUMMARY.md  SCREENSHOT_FLOW_DIAGRAM.md  SCREENSHOT_URLS_QUICK_REF.md  SDK_USAGE.md  VNC_SETUP.md  check_status.sh  docker-compose.yml  env.template  pyproject.toml  requirements.txt  run_server.sh  setup.py  start_for_omni.sh  start_vnc.sh  (+5 more)
app/: __init__.py  handlers.py  handlers_old.py  main.py  mcp_schema.py  utils.py
core/: __init__.py  actions.py  errors.py  schemas.py
mcp/: __init__.py  schemas.py  server.py
scripts/: run_arcadia_only.py
sdk/: __init__.py  client.py
